# Mini-CRM

./: README.md  dockerfile  mini_crm.db  pyproject.toml
migrations/: env.py
migrations/versions/: 4f96042604a9_initial_tables.py
mini_crm/: __init__.py  schemas.py
mini_crm/database/: __init__.py  database.py  models.py
mini_crm/routers/: __init__.py  contact.py  leads.py  operators.py  sources.py  stats.py
mini_crm/services/: __init__.py  contact.py  distribution.py  leads.py  operators.py  sources.py
